--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1 class="intro1">Le monde vous tend les bra</h1>
 			<span class="intro2">Rejoignez un groupe local pour rencontrer du monde, tester une nouvelle activité ou partager vos passions</span>
 			<button class="join-meetup" type="button" >
-				<a href="https://secure.meetup.com/register/">Join Meetup</a>
+				<a  class="join-meetup1" href="https://secure.meetup.com/register/">Join Meetup</a>
 			</button>
 		</div>		
 
@@ -91,6 +91,44 @@
 
 		</div>
 	</section>
+
+	<div class="footer">
+		<div class="title">
+			<a href="https://www.meetup.com/fr-FR/start/organizing">Creeruin groupe</a>
+		</div>
+		<div class="row">
+			<div class="row1">
+				<ul class="items-row1">
+					<li class="title-item">Mon compte</li>
+					<li class="sub-headline">InCription</li>
+					<li class="sub-headline">Connextion</li>
+					<li class="sub-headline">Aide</li>
+				</ul>
+			</div>
+
+			<div class="row1">
+				<ul class="items-row1">
+					<li class="title-item">Decouvrir</li>
+					<li class="sub-headline">Groupes</li>
+					<li class="sub-headline">Calenfrier</li>
+					<li class="sub-headline">Themes</li>
+					<li class="sub-headline">Villes</li>
+				</ul>
+			</div>
+
+			<div class="row1">
+				<ul class="items-row1">
+					<li class="title-item">A propos de Meetup</li>
+					<li class="sub-headline">Meetup Pro</li>
+					<li class="sub-headline">Carrieres</li>
+					<li class="sub-headline">Apps</li>
+					<li class="sub-headline">Blog</li>
+					<li class="sub-headline">Accessibilite</li>
+				</ul>
+			</div>
+
+		</div>
+	</div>
 
 </body>
 </html>
